--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Portugal -- Fiction'
+- GITenberg
 title: A Cidade e as Serras
 url: http://www.gutenberg.org/ebooks/18220
